@@ -9,6 +9,8 @@ option ( ENABLE_SANDBOX "Generate sandbox target" ON )
 option ( ENABLE_EXAMPLES "Generate example targets" ON )
 option ( BOOTSTRAP_CPM "Whether to download CPM" ON )
 option ( OVERRIDE_RUNTIME_OUTPUT_DIR "Specify value for CMAKE_RUNTIME_OUTPUT_DIRECTORY variable" ON )
+option ( DONT_LOOK_FOR_SFML "Don't look for SFML, use CPM to download it" OFF )
+option ( DONT_FETCH_SFML "Don't auto-fetch SFML, fail if not found" OFF )
 
 # CppInit
 include ( "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cpp-init.cmake" )
@@ -49,6 +51,15 @@ if (NOT ${PROJECT_IS_TOP_LEVEL} )
     set ( OVERRIDE_RUNTIME_OUTPUT_DIR OFF )
 endif ()
 
+message ("Configure options:")
+message ("  ENABLE_TESTS: ${ENABLE_TESTS}")
+message ("  ENABLE_SANDBOX: ${ENABLE_SANDBOX}")
+message ("  ENABLE_EXAMPLES: ${ENABLE_EXAMPLES}")
+message ("  BOOTSTRAP_CPM: ${BOOTSTRAP_CPM}")
+message ("  OVERRIDE_RUNTIME_OUTPUT_DIR: ${OVERRIDE_RUNTIME_OUTPUT_DIR}")
+message ("  DONT_LOOK_FOR_SFML: ${DONT_LOOK_FOR_SFML}")
+message ("  DONT_FETCH_SFML: ${DONT_FETCH_SFML}")
+
 if ( ${OVERRIDE_RUNTIME_OUTPUT_DIR} )
     set ( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${DGM_BINARY_DIR}/Compiled" )
 endif ()
@@ -57,9 +68,31 @@ if ( ${ENABLE_TESTS} )
     enable_testing()
 endif ()
 
+set ( SFML_FOUND FALSE )
+if ( ${DONT_LOOK_FOR_SFML} )
+    message ( "INFO: Not looking for SFML, using CPM to download it" )
+else ()
+    message ( "INFO: Looking for SFML, using find_package..." )
+    find_package ( SFML 3.0 QUIET COMPONENTS system window graphics )
+
+    if ( ${SFML_FOUND} )
+        message ( "SFML found: version ${SFML_VERSION} and ${SFML_DIR}" )
+    else()
+        message ( "SFML not found, will try CPM fallback if allowed" )
+    endif()
+endif()
+
 set ( SFML_VERSION "3.0.0" )
 
-CPMAddPackage( "gh:SFML/SFML#${SFML_VERSION}" )
+if ( NOT ${SFML_FOUND} )
+    if ( ${DONT_FETCH_SFML} )
+        message ( FATAL_ERROR "SFML not found, auto-fetching is disabled, exiting!" )
+    else ()
+        message ( "SFML not found, using CPM to download it" )
+        CPMAddPackage( "gh:SFML/SFML#${SFML_VERSION}" )
+    endif()
+endif()
+
 CPMAddPackage( "gh:nlohmann/json@3.11.2" )
 
 # Subprojects
